@@ -1,11 +1,18 @@
 package pieritz.prince.CRMAPP.services;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import pieritz.prince.CRMAPP.domain.Contact;
 import pieritz.prince.CRMAPP.dto.ContactMapper;
 import pieritz.prince.CRMAPP.dto.ContactRequest;
 import pieritz.prince.CRMAPP.dto.ContactResponse;
+import pieritz.prince.CRMAPP.exceptions.ContactNotFoundException;
 import pieritz.prince.CRMAPP.repositories.ContactRepository;
 import pieritz.prince.CRMAPP.services.interfaces.ContactService;
 
@@ -14,30 +21,40 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class ContactServiceImplementation implements ContactService {
     private final ContactRepository contactRepository;
     private final ContactMapper contactMapper;
 
     @Override
     public ContactResponse createContact(ContactRequest request) {
+        log.info("ContactService:createContact execution started");
         Contact contact = contactMapper.mapToContact(request);
+        log.debug("ContactService:createContact request parameters {} ", contact);
         Contact savedContact = contactRepository.save(contact);
-        return contactMapper.mapToContactResponse(savedContact);
+        ContactResponse contactResponse = contactMapper.mapToContactResponse(savedContact);
+        log.debug("ContactService:createContact received response from Database {} ", contactResponse);
+
+        return contactResponse;
     }
 
     @Override
     public ContactResponse getContactById(Long id) {
         Contact contact = contactRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Contact not found with id: " + id));
+                .orElseThrow(() -> new ContactNotFoundException("Contact not found with id: " + id));
         return contactMapper.mapToContactResponse(contact);
     }
 
     @Override
-    public List<ContactResponse> getAllContacts() {
-        List<Contact> contacts = contactRepository.findAll();
-        return contacts.stream()
-                .map(contactMapper::mapToContactResponse)
-                .collect(Collectors.toList());
+    @Cacheable(value = "contacts")
+    public Page<ContactResponse> getAllContacts(Pageable pageable) {
+        log.info("ContactService:getAllContacts execution started");
+        Page<Contact> contactPage = contactRepository.findAll(pageable);
+        List<ContactResponse> contactResponses = contactPage.getContent()
+            .stream()
+            .map(contactMapper::mapToContactResponse)
+            .toList();
+        return new PageImpl<>(contactResponses, pageable, contactPage.getTotalElements());
     }
 
     @Override
