@@ -1,6 +1,9 @@
 package pieritz.prince.CRMAPP.services;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import pieritz.prince.CRMAPP.domain.Invoice;
@@ -33,11 +36,12 @@ public class InvoiceServiceImplementation implements InvoiceService {
     }
 
     @Override
-    public List<InvoiceResponse> getAllInvoices() {
-        List<Invoice> invoices = invoiceRepository.findAll();
-        return invoices.stream()
+    public Page<InvoiceResponse> getAllInvoices(Pageable pageable) {
+        Page<Invoice> invoices = invoiceRepository.findAll(pageable);
+        List<InvoiceResponse> invoiceResponses = invoices.getContent().stream()
                 .map(invoiceMapper::toInvoiceResponse)
-                .collect(Collectors.toList());
+                .toList();
+        return new PageImpl<>(invoiceResponses, pageable, invoices.getTotalElements());
     }
 
     @Override
